objects/agreementValidationCLM__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the validation is applied</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Comments__c</fullName>
        <label>Error Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogicField__c</fullName>
        <label>LogicField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField1__c</fullName>
        <label>SourceField1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>SourceField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceValue1__c</fullName>
        <label>SourceValue1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceValue__c</fullName>
        <label>SourceValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <label>TargetField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetValue__c</fullName>
        <label>TargetValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>agreementValidationCLM</label>
</CustomObject>